GAMS Transfer R
==================
- Bug fix in corner case equation types from GDX files

GAMS Transfer R v3.0.2
==================
- Fix issues associated with memory checks and uninitialized variables

GAMS Transfer R v3.0.1
==================
- C++ GDX API version 7.11.2

GAMS Transfer R v3.0.0
==================
- C++ GDX API version 7.10.1
- New three digit versioning scheme

GAMS Transfer R 2.9.0
==================
- GDX API changed to the new GDX C++ API - significant performance improvements and no dependency on the GAMS system directory
- `systemDirectory` argument in the `Container` constructor is deprecated and will be removed in the future
- Bug fix: `Container` property `summary` changed from a method to active binding
- Fixed overriding PKG_CXXFLAGS in Makevars
- Performance improvements in read
- Bug fix: `Symbol` method `equals` incorrectly returned `FALSE` when the symbol records contain `NA`

GAMS Transfer R v2.8.0
==================
- bug fix in reading symbols with unused UELs
- bug fix in `getUELs` method with `unusedUELs` argument when the symbol has `NULL` records
- squashed a build warning

GAMS Transfer R v2.6.0
==================
- bug fix in registering unused UELs when not all symbols from the container are written to a GDX file
- Breaking: Following `Container` methods do not support `list` input for `symbols` argument: `describeSets`, `describeAliases`, `describeParameters`, `describeVariables`, `describeEquations`, `read`, `removeSymbols`, `getSymbols`. Use `vector` inputs instead.
- Breaking: `types` argument in the `Container` methods `listVariables` and `listEquations` does not support the input of type `list`. Use `vector` inputs instead.
- Breaking: `uelPriority` argument in the `Container` method `write` does not support the input of type `list`. Use `vector` inputs instead.
- `Container` method `write` now supports `mapped` write mode with the help of new argument `mode`